--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@opentelemetry/exporter-jaeger": "^1.27.0",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.13.0",
